<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TodayWeatherFragment"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:id="@+id/weather_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        >

    <TextView
        android:id="@+id/text_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:text="@string/Weather_in"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <ImageView
            android:id="@+id/image_weather"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher"
            />

        <TextView
            android:id="@+id/text_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="50sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:text="14 C"
            android:layout_marginLeft="8dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:text="14 C"
        android:layout_marginLeft="8dp"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/text_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:text="14 C"
        android:layout_marginLeft="8dp"
        android:layout_gravity="center"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:stretchColumns="*"
        >
        <TableRow
            android:background="@color/colorAccent"
            android:padding="@dimen/dimen_8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Name"
                android:textColor="@android:color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status"
                android:textColor="@android:color/white" />

        </TableRow>
          <TableRow
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/dimen_8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Wind"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Deg : 1"
                android:textColor="@android:color/white"
                android:id="@+id/text_wind_Deg"
                />

            <TextView
                android:id="@+id/text_wind_Speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Speed : 12"
                android:textColor="@android:color/white" />

        </TableRow>
          <TableRow
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/dimen_8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Pressure"
                android:textColor="@android:color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1011.3 hpa"
                android:textColor="@android:color/white"
                android:id="@+id/text_pressure"
                />

        </TableRow>
          <TableRow
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/dimen_8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:text="@string/Humidity"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="50 %"
                android:textColor="@android:color/white"
                android:id="@+id/text_humidity"
                />

        </TableRow>
          <TableRow
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/dimen_8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:text="@string/Sunrise"
                />

            <TextView
                android:id="@+id/text_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="6:00"
                android:textColor="@android:color/white" />

        </TableRow>
          <TableRow
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/dimen_8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:text="@string/Sunset"

                />
            <TextView
                android:id="@+id/text_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="6:01"
                android:textColor="@android:color/white" />

        </TableRow>
          <TableRow
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/dimen_8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:text="@string/Geo_coords"
                />
            <TextView
                android:id="@+id/text_geo_coords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="21"
                android:textColor="@android:color/white" />
        </TableRow>

    </TableLayout>

    </LinearLayout>



   <ProgressBar
       android:id="@+id/progress_circular"
       android:indeterminate="true"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true"
       />


</RelativeLayout>